# stylizer

./: .gitmodules  CMakeLists.txt  hello_gui.cpp  test.cpp
examples/: 01.hello-triangle.cpp
modules/stylizer/: .gitignore
modules/stylizer/core/: CMakeLists.txt  api.cppm  api.hpp  buffer.cppm  buffer.utility.cppm  camera.cppm  color_depth_frame_buffer.hpp  color_depth_geometry_buffer.hpp  context.cppm  core.cpp  core.hpp  flat_material.cpp  flat_material.hpp  frame_buffer.color_depth.cppm  frame_buffer.cpp  frame_buffer.cppm  frame_buffer.single_texture.cppm  instance_buffer.cpp  managed_buffer.cppm  manual_material.hpp  material.cppm  material.flat.cppm  material.flat.hpp.bak  maybe_owned.hpp  single_texture_frame_buffer.hpp  slang_types.hpp  surface.cpp  surface.cppm  texture.cpp  texture.cppm  time.cppm  utility_data.partial.hpp
modules/stylizer/core/shaders/: flat_material.slang
modules/stylizer/core/shaders/embeded/: stylizer.core.slang  stylizer.core.types.slang  stylizer.default.slang  stylizer.slang
modules/stylizer/core/util/: load_file.cpp  load_file.cppm  load_file.hpp  maybe_owned.cppm  maybe_owned.hpp  move_and_make_owned_macros.hpp  reaction.cpp  reactive.hpp
modules/stylizer/image/: CMakeLists.txt  api.cppm  api.hpp  image.cpp  image.cppm  load.cppm  memory_image.cppm  memory_image.hpp
modules/stylizer/img/: img.cpp  img.hpp
modules/stylizer/imgui/: CMakeLists.txt  high_level.cpp  high_level.hpp  imgui_impl_stylizer_api.cpp  imgui_impl_stylizer_api.h  imgui_impl_stylizer_window.cpp  imgui_impl_stylizer_window.h  imgui_stylizer_style.h
modules/stylizer/input/: CMakeLists.txt  api.cppm  api.hpp
modules/stylizer/model/: CMakeLists.txt  api.cppm  api.hpp  dynamic_mesh.cpp  dynamic_mesh.cppm  dynamic_mesh.hpp  instance_data.cppm  instance_data.hpp  load.cppm  load.hpp  mesh.cpp  mesh.cppm  mesh.hpp  model.cpp  model.cppm  model.hpp  storage.cppm  storage.hpp  type_erased_storage.hpp
modules/stylizer/sdl/: CMakeLists.txt  common.hpp  event.cpp  event.hpp  input.cpp  input.hpp  window.cpp  window.hpp
modules/stylizer/window/: CMakeLists.txt  api.cppm  api.hpp  window.cpp  window.h  window.hpp
